opam-version: "2.1.2"
name: "an-metri-gal"
version: "0.2.0"
synopsis: "Analise metrico de texto en verso en lingua galega (Galician language) gl-ES"
maintainer: "juliojgd"
authors: "juliojgd"
homepage: "https://github.com/juliojgd/an-metri-gal"
bug-reports: "https://github.com/juliojgd/an-metri-gal/issues"
dev-repo: "git://github.com/juliojgd/an-metri-gal.git"
license: "Apache License 2.0"
